cmake_minimum_required(VERSION 2.8)
project( opencv-tests )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( contours contours.cpp )
add_executable( corners corners.cpp )
add_executable( lsd-lines lsd-lines.cpp )
add_executable( match-template match-template.cpp )
add_executable( Morphology_3 Morphology_3.cpp )
add_executable( shape-detect shape-detect.cpp )

target_link_libraries( contours ${OpenCV_LIBS} )
target_link_libraries( corners ${OpenCV_LIBS} )
target_link_libraries( lsd-lines ${OpenCV_LIBS} )
target_link_libraries( match-template ${OpenCV_LIBS} )
target_link_libraries( Morphology_3 ${OpenCV_LIBS} )
target_link_libraries( shape-detect ${OpenCV_LIBS} )
